# PlayfieldEngine

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  mkdocs.yml
.github/workflows/: release.yml
StratoHAL/: CMakeLists.txt
StratoHAL/cmake/: brotli.cmake  freetype.cmake  jpeg.cmake  libogg.cmake  libwebp.cmake
StratoHAL/i18n/: message.txt
StratoHAL/include/stratohal/: c89compat.h  platform.h
StratoHAL/src/: GameRenderer.h  GameRenderer.m  MainActivity.java  Noct2D.cs  NoctScript.cs  archive.c  d3d12render.cc  d3drender.c  drawimage.h  emmain.c  glhelper.h  glrender.h  icon.c  image.c  ndkfile.c  ndkmain.c  nsmain.m  qtgamewidget.cpp  stdfile.c  uimain.h  wave.c  winmain.c  x11main.c  x11softrender.c
cmake/: unity-ps5.cmake  unity-switch.cmake  unity-win64.cmake  unity-xbox.cmake
cmake/modules/: FindGetText.cmake~  FindINTL.cmake~
cmake/toolchains/: ios-device.cmake  ios-simulator.cmake  mingw-x86.cmake  unity-ps5.cmake  unity-switch.cmake  unity-win64.cmake  unity-xbox.cmake  wasm.cmake
docs/: api.md  build.md  design.md  gettingstarted.md  index.md  noctvm.1  porting.md  syntax.md  unity.md  wasm.md
docs/book-ja/: 01-intro.md  02-run.md  Makefile  index.md  screen.css
docs/mkdocs-en/: mkdocs.yml
docs/mkdocs-en/docs/: api.md  build.md  design.md  distribute.md  gettingstarted.md  index.md  syntax.md  wasm.md
docs/mkdocs-ja/: mkdocs.yml
docs/mkdocs-ja/docs/: api.md  build.md  design.md  distribute.md  gettingstarted.md  index.md  syntax.md
docs/readme/: hajimeni.txt  readme.txt  unity.md  wasm.md
i18n/: message.txt
include/: README.md
include/clang-include/: arm_neon.h
include/msvc-include/: emmintrin.h  windows.h
include/noct/: c89compat.h  noct.h
include/noct2d/: c89compat.h  noct2d.h
include/picopico/: c89compat.h  picopico.h
include/playfield/: c89compat.h  playfield.h
include/strato/: c89compat.h  strato.h  swift.h
include/stratohal/: c89compat.h
locale/de/LC_MESSAGES/: libplayfield.mo
locale/el/LC_MESSAGES/: libnoct.mo  libplayfield.mo
locale/en/LC_MESSAGES/: libnoct.mo  libplayfield.mo
locale/es/LC_MESSAGES/: libnoct.mo  libplayfield.mo
locale/fr/LC_MESSAGES/: libplayfield.mo
locale/it/LC_MESSAGES/: libnoct.mo  libplayfield.mo
locale/ja/LC_MESSAGES/: libplayfield.mo
locale/ru/LC_MESSAGES/: libnoct.mo  libplayfield.mo
locale/zh_CN/LC_MESSAGES/: libnoct.mo  libplayfield.mo
locale/zh_TW/LC_MESSAGES/: libnoct.mo  libplayfield.mo
projects/android-src/: Makefile
projects/android-src/app/: build.gradle
projects/android/app/: build.gradle
projects/ios/: Main.storyboard
projects/ios-src/: Makefile  build-libs.sh
projects/ios/ios.xcodeproj/: project.pbxproj
projects/ios/ios.xcodeproj/xcshareddata/xcschemes/: ios.xcscheme
projects/ios/ios.xcodeproj/xcuserdata/tabata.xcuserdatad/xcschemes/: xcschememanagement.plist
projects/linux-fbdev/: Makefile
projects/linux-softrender/: Makefile
projects/macos-dmg/: Makefile  build-libs.sh
projects/macos-dmg/macos-src/macos/: main.m
projects/macos-dmg/macos-src/macos/Base.lproj/: Main.storyboard
projects/macos-dmg/macos.xcodeproj/: project.pbxproj
projects/macos-dmg/macos.xcodeproj/xcshareddata/xcschemes/: NoctVM.xcscheme
projects/qt-test/: CMakeLists.txt
projects/unity-src/: Makefile  README.md
projects/unity-src/scripts/: build-ps5.bat  build-switch.bat  build-xboxxs.bat
projects/wasm/: Makefile
projects/windows-vs/: build-libs.bat  build-libs.sh  build-src.sh  noctvm.vcxproj  noctvm.vcxproj.filters  pre-build-event.bat
projects/windows-vs/vs-src/: entry.c  fuelcore.vcxproj  visualstudio.sln
resources/: AppRun  NoctVM.desktop  assets.arc  assets.pak  hajimeni.txt  readme.txt  resource.rc
resources/android/: module.json
resources/i18n/: make_mo.sh  make_translation.py  message.txt
resources/i18n/po_files/: de.po  el.po  en.po  es.po  fr.po  it.po  ja.po  ru.po  tw.po  zh.po
resources/installer/: install-script.nsi
resources/ios/: Info.plist  product.img
resources/linux/: AppRun
resources/manpage/: playfield-compiler.1  playfield-compiler.1.mdoc  playfield-pack.1  playfield-pack.1.mdoc  playfield.1  playfield.1.mdoc
resources/msvc-include/: stdint.h
resources/pkg-config/: libstrato.pc
resources/projects/android/app/: build.gradle
resources/projects/ios/ios/: main.m
resources/projects/ios/ios.xcodeproj/: project.pbxproj
resources/projects/macos/Game/: library.c  main.m
resources/projects/macos/Game.xcodeproj/: project.pbxproj
resources/scripts/: build-android.sh  build-linux-arm64.sh  build-macos.sh  build-unity-switch.sh  build-unity-xbox.sh  build-wasm.sh  build-win-x86.sh  docker-build.sh  release.sh
resources/windows/: editor-resource.rc  pack-resource.rc  resource.rc  web-resource.rc
resources/windows/gdk/: MicrosoftGame.config  appxmanifest.xml
sample/: main.noct  main.ns
samples/bouncer/: main.noct  main.pf
samples/hearbeatclock/: main.noct  main.pf
samples/rush/: main.noct  main.pf  main.ray
samples/shoot/: main.noct  main.pf  main.ray
samples/shoot2/: main.pf  main.ray
scripts/: Dockerfile  build-freebsd.sh  build-linux-x86_64.sh  build-linux.sh  build-mac.sh  build-unity-ps5.sh  build-unity-switch.sh  build-unity-win64.sh  build-unity-xbox.sh  build-wasm.sh  build-win-arm64.sh  build-win-x86_64.sh  build-win.sh  release.sh
src/: 98main.c  MainActivity.java  aot.c  api.c  api.h  app.c  archive.c  bemain.cc  c89compat.h  common.c  common.h  compiler.c  csharp.c  csharp.h  editor.c  emfile.c  emlocalmain.c  emmain.c  engine.h  fbmain.c  gbmmain.c  gdkmain.cpp  halwrap.c  hook.c  i18n.c  i18n.h  image.c  main.c  mainloop.c  mainloop.h  ndkmain.c  noct2dpack.c  nsmain.m  ohmain.cpp  pack.c  pre.js  shelllocal.html  tag.c  tag.h  translation.c  (+10 more)
src/api/: api-console.c  api-system.c
src/backend/: cback.c
src/cli/: cli-main.c  cli-repl.c  cli-run.c
src/core/: gc.c  gc.h  lir.c  noct.c  runtime.c
src/i18n/: i18n.c  make_translation.py  message.txt  translation.c
tests/: main.noct  novel.noct  start.tag  test_invariant_vm.c
(+7 files in other folders)
